--- a/styles/globals.css
+++ b/styles/globals.css
@@ -70,7 +70,7 @@
   }
 } */
 
-@import url("https://fonts.googleapis.com/css2?family=Lato:wght@700&family=Open+Sans:wght@400;700&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@700&family=Open+Sans:wght@400;700&display=swap');
 
 * {
   box-sizing: border-box;
@@ -85,7 +85,7 @@ body {
 }
 
 body {
-  font-family: "Open Sans", "Lato", sans-serif;
+  font-family: 'Open Sans', 'Lato', sans-serif;
 }
 
 h1,
@@ -94,7 +94,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: "Lato", sans-serif;
+  font-family: 'Lato', sans-serif;
 }
 
 a {
@@ -120,4 +120,3 @@ a {
 ::-webkit-scrollbar-thumb:hover {
   background: #242424;
 }
-
